--- a/webpack-vue3-element-js/package.json
+++ b/webpack-vue3-element-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-template",
+  "name": "webpack-vue3-element-js",
   "license": "ISC",
   "version": "0.1.0",
   "online": "http://localhost:3000",
