--- a/vite3-vue3-antd-ts/tsconfig.json
+++ b/vite3-vue3-antd-ts/tsconfig.json
@@ -1,18 +1,34 @@
 {
   "compilerOptions": {
+    // 将代码编译为最新版本的 JS
     "target": "ESNext",
+    // 使用 Object.defineProperty 定义 class 中的属性，而非使用 obj.key = value 的形式定义属性
     "useDefineForClassFields": true,
+    // 使用 ES Module 格式打包编译后的文件
     "module": "ESNext",
+    // 使用 Node 的模块解析策略
     "moduleResolution": "Node",
+    // 启用所用严格的类型检查
     "strict": true,
+    // 保留原始的 JSX 代码，不进行编译
     "jsx": "preserve",
+    // 生成 sourceMap 文件
+    "sourceMap": true,
+    // 允许引入 JSON 文件
     "resolveJsonModule": true,
+    // 该属性要求所有文件都是 ES Module 模块。
     "isolatedModules": true,
+    // 允许使用 import 引入使用 export = 导出的内容
     "esModuleInterop": true,
+    // 引入 ES 最新特性和 DOM 接口的类型定义
     "lib": ["ESNext", "DOM"],
+    // 跳过对 .d.ts 文件的类型检查
     "skipLibCheck": true,
+    // 不生成ts编译的js文件
     "noEmit": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  // 通过 references 允许用户为项目的不同部分使用不同的 TypeScript 配置。
+  // 通过 references 字段引入 tsconfig.vite.json 中的配置。
+  "references": [{ "path": "./tsconfig.vite.json" }]
 }
