完善相关基础配置

--- a/vite3-vue3-antd-ts/tsconfig.json
+++ b/vite3-vue3-antd-ts/tsconfig.json
@@ -26,6 +26,8 @@
     "skipLibCheck": true,
     // 不生成ts编译的js文件
     "noEmit": true,
+    // 查找模块的路径，相对于tsconfig文件的位置寻找，下面的路径别名需要基于此配置
+    "baseUrl": ".",
     // ts中别名设置,需与vite配置同步
     "paths": {
       "@/*": ["src/*"]
