--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --mode development",
+    "dev": "vite serve --mode development",
     "build": "vue-tsc && vite build --mode production",
+    "lint": "eslint --fix --ext .js --ext .vue src",
     "preview": "vite preview"
   },
   "dependencies": {
