--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.8.0",
+    "prettier": "2.8.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
