--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
+    "axios": "1.2.0",
     "vue": "^3.2.41",
     "vue-router": "4"
   },
