--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -20,9 +20,11 @@
     "ant-design-vue": "^3.2.15",
     "axios": "1.2.0",
     "vue": "^3.2.41",
-    "vue-router": "4"
+    "vue-router": "4",
+    "mockjs": "1.1.0"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-vue": "^3.2.0",
