--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "ant-design-vue": "^3.2.15",
     "axios": "1.2.0",
+    "mockjs": "1.1.0",
     "vue": "^3.2.41",
     "vue-router": "4",
-    "mockjs": "1.1.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.7",
