--- a/vite3-vue3-antd-ts/package.json
+++ b/vite3-vue3-antd-ts/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.8.0",
+    "less": "^4.1.3",
     "prettier": "2.8.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.3",
